[tool.poetry]
name = "alignn"
version = "2023.01.10"
description = ""
authors = ["Kamal Choudhary", "Brian Decoste"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
jarvis-tools = ">=2021.07.19"
torch = ">=1.6.1"
dgl-cu116 = { version = "*", source = "dglrepo"}
scikit-learn = ">=0.22.2"
matplotlib = ">=3.4.1"
tqdm = ">=4.60.0"
pandas = ">=1.2.3"
pytorch-ignite = "^0.4.10"
ase = "^3.22.1"
numpy = ">=1.19.5"
scipy = ">=1.6.1"
cif2cell = {version = "^2.0.0a3", optional = true}
# pytraj = {version = "^2.0.5", optional = true} #doesn't work

[tool.poetry.group.dev.dependencies]
pydantic = ">=1.8.1"
flake8 = ">=3.9.1"
pycodestyle = ">=2.7.0"
pydocstyle = ">=6.0.0"
pyparsing = "^2.2.1"
pytest = "^7.2.1"
codecov = "^2.1.12"
pytest-cov = "^4.0.0"
coverage = "^7.0.5"

[[tool.poetry.source]]
name = "dglrepo"
url = "https://data.dgl.ai/wheels/"
default = false
secondary = true

[tool.poetry.extras]
# structs = ["cif2cell", "pytraj"]
structs = ["cif2cell"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.black]
line_length = 79

[tool.conda-lock.dependencies]
cudatoolkit = "=11.6"